config/prd-nodejs/deploment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-tutorialspoint
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nodejs-tutorialspoint
  template:
    metadata:
      labels:
        app: nodejs-tutorialspoint
    spec:
      containers:
      - args:
            - --cluster-name=eks-tutorials-example
            - --ingress-class=alb
            - --aws-vpc-id=vpc-0219fc6eed26379b7
            - --aws-region=ap-southeast-1
      - name: nodejs-tutorialspoint
        image: 997305327977.dkr.ecr.ap-southeast-1.amazonaws.com/nodejs-tutorials:latest
        resources:
          limits:
            memory: "256Mi"
            cpu: "250m"
          requests:
            memory: "128Mi"
            cpu: "100m"
        ports:
          - name: http
            containerPort: 8081
            protocol: TCP
        livenessProbe:
          httpGet:
            path: /live
            port: http
        readinessProbe:
          httpGet:
            path: /ready
            port: http
